--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ einops = "^0.6.1"
 lmdb = "^1.5.1"
 numpy = "^1.25.2"
 opencv-python-headless = "^4.8.1.78"
-python = "^3.12"
+python = "^3.11"
 pywavelets = "^1.5.0"
 scipy = "^1.11.1"
 tqdm = "^4.65.0"
@@ -37,3 +37,6 @@ split-on-trailing-comma = false
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+neosr = "neosr:main"
